feat: linkedin redirect

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-I am Pedro Almeida
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=https://www.linkedin.com/in/pedro-almeida-17a6bb183">
+    <title>Redirecting...</title>
+</head>
+</html>
